# frank-prince

./: CMakeLists.txt  README.md  build.sh  flash.sh  release.sh
drivers/: HDMI.c
drivers/audio/: CMakeLists.txt  audio_i2s_driver.c  audio_i2s_driver.h
src/: SDL_port.c  board_config.h  main.c  start_screen.c  start_screen.h
